fix overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 body {
   font-size: 16px;
-  overflow: hidden;
+  min-height: 100vh;
 }
 
 ul {
